# 3dmm_basic

./: CMakeLists.txt  Dockerfile  README.md  README.md~
config/: CMakeLists.txt
include/: BaselFace.h  BaselFaceEstimator.h  FImRenderer.h  FTModel.h  FaceServices2.h  FaceServices2.h~  MeshModel.h  RenderModel.h  epnp.h  utility.h
modules/CLM/: CMakeLists.txt
modules/CLM/Debug/: CL.read.1.tlog  CL.write.1.tlog  CLM.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc100.idb
modules/CLM/include/: CCNF_patch_expert.h  CLM.h  CLMParameters.h  CLMTracker.h  CLM_utils.h  DetectionValidator.h  JanusUtils.h  PAW.h  PDM.h  Patch_experts.h  SVR_patch_expert.h
modules/CLM/model/: clm_ccnf_general_70.txt  clm_ccnf_wild_70.txt  main_ccnf_general_70.txt  main_ccnf_wild_70.txt
modules/CLM/model/patch_experts/: ccnf_patches_0.25_general.txt  ccnf_patches_0.25_janus_5view.txt  ccnf_patches_0.25_janus_7view.txt  ccnf_patches_0.25_multi_pie.txt  ccnf_patches_0.25_wild.txt  ccnf_patches_0.35_general.txt  ccnf_patches_0.35_janus_5view.txt  ccnf_patches_0.35_janus_7view.txt  ccnf_patches_0.35_multi_pie.txt  ccnf_patches_0.35_wild.txt  ccnf_patches_0.5_general.txt  ccnf_patches_0.5_janus_5view.txt  ccnf_patches_0.5_janus_7view.txt  ccnf_patches_0.5_multi_pie.txt  ccnf_patches_0.5_wild.txt
modules/CLM/model/pdms/: In-the-wild_aligned_PDM_70.txt
modules/CLM/src/: CCNF_patch_expert.cpp  CLM.cpp  CLMTracker.cpp  CLM_utils.cpp  DetectionValidator.cpp  JanusUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
modules/CvGl/: CMakeLists.txt  FBRender.cpp  FBRender.h  SimpleMesh.h  Texture.h  cvgl.h
modules/CvGl/Debug/: BuildLog.htm  vc90.idb
scripts/: iris3d_dir.sh  iris3d_file.sh  iris3d_meta.sh
src/: BaselFace.cpp  BaselFaceEstimator.cpp  FImRenderer.cpp  FTModel.cpp  FaceServices2.cpp  FaceServices2_wexpr.cpp  MeshModel.cpp  RenderModel.cpp  SimpleCLMImg_wexpr.cpp  testRender.cpp  utility.cpp
